--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -46,11 +46,43 @@
       </div>
       <nav class="nav  nav--closed">
         <ul class="nav__list">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Trading</a></li>
-          <li><a href="#">Resources</a></li>
+          <li>
+            <a href="#">About</a>
+            <ul class="nav__sub">
+              <li><a href="#">Licenses and Regulations</a></li>
+              <li><a href="#">Security of Funds</a></li>
+              <li><a href="#">STP Broker</a></li>
+              <li><a href="#">Legal Documents</a></li>
+              <li><a href="#">KIDs</a></li>
+              <li><a href="#">Careers</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Trading</a>
+            <ul class="nav__sub">
+              <li><a>Account Types</a></li>
+              <li><a href="#">Account Comparison</a></li>
+              <li><a href="#">Product Specification</a></li>
+              <li><a href="#">Trading Specification</a></li>
+              <li><a href="#">Platforms</a></li>
+              <li><a href="#">Funding and Withdrawal</a></li>
+              <li><a href="#">Announcements</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Resources</a>
+            <ul class="nav__sub">
+              <li><a href="#">Glossary</a></li>
+              <li><a href="#">Tools</a></li>
+            </ul>
+          </li>
           <li><a href="#">Partners</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li>
+            <a href="#">Contact Us</a>
+            <ul class="nav__sub">
+              <li><a href="#">FAQ</a></li>
+            </ul>
+          </li>
         </ul>
         <label class="nav__search">
           <input type="search">
@@ -204,7 +236,7 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="#">Account Types</a></li>
+          <li><a class="footer__active">Account Types</a></li>
           <li><a href="#">Account Comparison</a></li>
           <li><a href="#">Product Spesification</a></li>
           <li><a href="#">Trading Spesification</a></li>
