--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -60,8 +60,8 @@
               <a href="#">Trading</a>
               <ul class="nav__sub">
                 <li><a href="trading/account-types.html">Account Types</a></li>
-                <li><a href="#">Account Comparison</a></li>
-                <li><a href="#">Product Specification</a></li>
+                <li><a href="trading/account-comparison.html">Account Comparison</a></li>
+                <li><a href="trading/product-specification.html">Product Specification</a></li>
                 <li><a href="#">Trading Specification</a></li>
                 <li><a href="#">Platforms</a></li>
                 <li><a href="#">Funding and Withdrawal</a></li>
@@ -567,9 +567,9 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="#">Account Types</a></li>
-          <li><a href="#">Account Comparison</a></li>
-          <li><a href="#">Product Spesification</a></li>
+          <li><a href="trading/account-types.html">Account Types</a></li>
+          <li><a href="trading/account-comparison.html">Account Comparison</a></li>
+          <li><a href="trading/product-specification.html">Product Spesification</a></li>
           <li><a href="#">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="#">Funding and Withdrawal</a></li>
