--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Account Types - Forex24 Global</title>
+  <title>Account Comparison - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -60,8 +60,8 @@
           <li>
             <a href="#">Trading</a>
             <ul class="nav__sub">
-              <li><a>Account Types</a></li>
-              <li><a href="account-comparison.html">Account Comparison</a></li>
+              <li><a href="account-types.html">Account Types</a></li>
+              <li><a>Account Comparison</a></li>
               <li><a href="product-specification.html">Product Specification</a></li>
               <li><a href="#">Trading Specification</a></li>
               <li><a href="#">Platforms</a></li>
@@ -90,109 +90,10 @@
       </nav>
     </div>
   </header>
-  <section class="account-types">
+  <section class="account-comparison">
     <div class="container">
-      <h1 class="account-types__name">Account types</h1>
-      <p class="account-types__text">We present our customers with an account selection that can satisfy each trader’s needs and preferences. Our team has thought about even the smallest of details and produced different account types so you can select the one that best suits your needs. There are different accounts to choose from and each one has its benefits.</p>
-      <div class="account-types__flex">
-        <div class="account-types__box  account-types__box--mini">
-          <h2>Mini</h2>
-          <p>Basic Trading For Beginners</p>
-          <b>$500</b>
-          <hr>
-          <ul>
-            <li>Min First Deposit: <span>$/£/€/100</span></li>
-            <li>Account Currency: <span>USD/EUR/GBP</span></li>
-            <li>Default Leverage: <span>1:50</span></li>
-            <li>Maximum Leverage: <span>1:50</span></li>
-            <li>Margin Call Level: <span>75%</span></li>
-            <li>Stop Out Level: <span>50%</span></li>
-            <li>Standard Lot Size on Forex, Indices & Commodities CFDs: <span>Min 0.01 – Max 500</span></li>
-            <li>Standard Lot Size on Stocks: <span>Min 1 – Max 1000</span></li>
-            <li>Online Chat Support</li>
-            <li>Platforms: <span>Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</span></li>
-            <li>Instruments: <span>CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</span></li>
-            <li>Free E-book</li>
-            <li>Competitive Spreads Only – No Commissions</li>
-            <li>Access to Breaking News & Market Research</li>
-            <li>Account Executive Team Available 24/5</li>
-          </ul>
-          <a href="#">Create account</a>
-        </div>
-        <div class="account-types__box  account-types__box--silver">
-          <h2>Classic Silver</h2>
-          <p>Trading For Experienced Investors</p>
-          <b>$500</b>
-          <hr>
-          <ul>
-            <li>Min First Deposit: <span>$/£/€/500</span></li>
-            <li>Account Currency: <span>USD/EUR/GBP</span></li>
-            <li>Default Leverage: <span>1:50</span></li>
-            <li>Maximum Leverage: <span>1:400</span></li>
-            <li>Margin Call Level: <span>75%</span></li>
-            <li>Stop Out Level: <span>50%</span></li>
-            <li>Standard Lot Size on Forex, Indices & Commodities CFDs: <span>Min 0.01 – Max 500</span></li>
-            <li>Standard Lot Size on Stocks: <span>Min 1 – Max 1000</span></li>
-            <li>Online Chat Support</li>
-            <li>Platforms: <span>Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</span></li>
-            <li>Instruments: <span>CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</span></li>
-            <li>Free E-book</li>
-            <li>Low Spreads & Commission</li>
-            <li>Access to Breaking News & Market Research</li>
-            <li>Account Executive Team Available 24/5</li>
-          </ul>
-          <a href="#">Create account</a>
-        </div>
-        <div class="account-types__box  account-types__box--gold">
-          <h2>Premium Gold</h2>
-          <p>Advanced Trading For Serious Investors</p>
-          <b>$500</b>
-          <hr>
-          <ul>
-            <li>Min First Deposit: <span>$/£/€/1,000</span></li>
-            <li>Account Currency: <span>USD/EUR/GBP</span></li>
-            <li>Online Chat Support</li>
-            <li>Platforms: <span>Forex24 MT4 Desktop, Forex24 WebTrader & Mobile</span></li>
-            <li>Default Leverage: <span>1:50</span></li>
-            <li>Maximum Leverage: <span>1:200</span></li>
-            <li>Margin Call Level: <span>75%</span></li>
-            <li>Stop Out Level: <span>50%</span></li>
-            <li>Standard Lot Size on Forex, Indices & Commodities CFDs: <span>Min 0.01 – Max 500</span></li>
-            <li>Standard Lot Size on Stocks: <span>Min 1 – Max 1000</span></li>
-            <li>Instruments: <span>CFDs on Forex, Commodities, Indices, Metals, Energies & Stocks</span></li>
-            <li>Free E-book</li>
-            <li>Extremely Low Spread & Commission</li>
-            <li>Access to Breaking News & Market Research</li>
-            <li>Account Executive Team Available 24/5</li>
-          </ul>
-          <a href="#">Create account</a>
-        </div>
-        <div class="account-types__box  account-types__box--zulu">
-          <h2>ZuluTrade</h2>
-          <p>Social & Copytrading</p>
-          <b>$500</b>
-          <hr>
-          <ul>
-            <li>Min First Deposit: <span>$/£/€/100</span></li>
-            <li>Account Currency: <span>EUSD/EUR/GBP</span></li>
-            <li>Platforms: <span>Desktop & Mobile</span></li>
-            <li>Default Leverage: <span>1:50</span></li>
-            <li>Maximum Leverage: <span>1:400</span></li>
-            <li>Margin Call Level: <span>75%</span></li>
-            <li>Stop Out Level: <span>50%</span></li>
-            <li>Standard Lot Size on Forex, Indices & Commodities CFDs: <span>Min 0.01 – Max 500</span></li>
-            <li>Online Chat Support</li>
-            <li>Instruments: <span>CFDs on Forex, Commodities, Indices, Metals</span></li>
-            <li>Free E-book</li>
-            <li>Low Spreads & Commission</li>
-            <li>Access to Breaking News & Market Research</li>
-            <li>Account Executive Team</li>
-            <li>Available 24/5</li>
-          </ul>
-          <a href="#">Create account</a>
-        </div>
-      </div>
-      <p class="account-types__risk">Trading involves risk of loss</p>
+      <h1 class="account-comparison__name">Account comparison</h1>
+      <p class="account-comparison__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio minus, provident dolores quos. Facere, vel expedita rem. Facilis unde, quidem ab animi placeat doloribus. Debitis, placeat, cum dolor accusamus recusandae fuga eligendi ipsum, molestiae eos, ad sed? Esse aperiam, amet laboriosam assumenda eos voluptatem magnam ea officia odio dolorem. Beatae.</p>
     </div>
   </section>
   <section class="payment  payment--inner">
@@ -236,8 +137,8 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a class="footer__active">Account Types</a></li>
-          <li><a href="account-comparison.html">Account Comparison</a></li>
+          <li><a href="account-types.html">Account Types</a></li>
+          <li><a class="footer__active">Account Comparison</a></li>
           <li><a href="product-specification.html">Product Spesification</a></li>
           <li><a href="#">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
