--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -61,8 +61,8 @@
             <a href="#">Trading</a>
             <ul class="nav__sub">
               <li><a href="../account-types.html">Account Types</a></li>
-              <li><a href="#">Account Comparison</a></li>
-              <li><a href="#">Product Specification</a></li>
+              <li><a href="../account-comparison.html">Account Comparison</a></li>
+              <li><a href="../product-specification.html">Product Specification</a></li>
               <li><a href="#">Trading Specification</a></li>
               <li><a href="#">Platforms</a></li>
               <li><a href="#">Funding and Withdrawal</a></li>
@@ -216,8 +216,8 @@
           <li><b>Trading</b></li>
           <li><hr></li>
           <li><a href="../account-types.html">Account Types</a></li>
-          <li><a href="#">Account Comparison</a></li>
-          <li><a href="#">Product Spesification</a></li>
+          <li><a href="../account-comparison.html">Account Comparison</a></li>
+          <li><a href="../product-specification.html">Product Spesification</a></li>
           <li><a href="#">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="#">Funding and Withdrawal</a></li>
