--- a/forexglobal/about-us/security-of-funds.html
+++ b/forexglobal/about-us/security-of-funds.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Account Comparison - Forex24 Global</title>
+  <title>Security of Funds - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -50,19 +50,19 @@
             <a href="#">About</a>
             <ul class="nav__sub">
               <li><a href="#">Licenses and Regulations</a></li>
-              <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
-              <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+              <li><a>Security of Funds</a></li>
+              <li><a href="stp-broker.html">STP Broker</a></li>
               <li><a href="#">Legal Documents</a></li>
-              <li><a href="../about-us/kids.html">KIDs</a></li>
-              <li><a href="../about-us/careers.html">Careers</a></li>
+              <li><a href="kids.html">KIDs</a></li>
+              <li><a href="careers.html">Careers</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Trading</a>
             <ul class="nav__sub">
-              <li><a href="account-types.html">Account Types</a></li>
-              <li><a>Account Comparison</a></li>
-              <li><a href="product-specification.html">Product Specification</a></li>
+              <li><a href="../trading/account-types.html">Account Types</a></li>
+              <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+              <li><a href="../trading/product-specification.html">Product Specification</a></li>
               <li><a href="#">Trading Specification</a></li>
               <li><a href="#">Platforms</a></li>
               <li><a href="#">Funding and Withdrawal</a></li>
@@ -90,10 +90,22 @@
       </nav>
     </div>
   </header>
-  <section class="account-comparison">
+  <section class="security">
     <div class="container">
-      <h1 class="account-comparison__name">Account comparison</h1>
-      <p class="account-comparison__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio minus, provident dolores quos. Facere, vel expedita rem. Facilis unde, quidem ab animi placeat doloribus. Debitis, placeat, cum dolor accusamus recusandae fuga eligendi ipsum, molestiae eos, ad sed? Esse aperiam, amet laboriosam assumenda eos voluptatem magnam ea officia odio dolorem. Beatae.</p>
+      <h1 class="security__name">Security of Funds</h1>
+      <div class="security__img"></div>
+      <div class="security__text">
+        <b>Regulation</b>
+        <p>Forex24 Global is the brand name of Lydya Financials Ltd, who is authorised and regulated by the Cyprus Securities and Exchange Commission (CySEC) with licence number <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/">300/16</a>. CySEC is a member of the European Securities and Markets Authority (ESMA), and is the supervisory and regulatory authority for investment firms in Cyprus.</p>
+        <b>Segregation of Funds</b>
+        <p>As a regulatory requirement, client funds are kept in separate clients’ accounts in top tier EU banks, to be used only for client trading and are totally separate from the company’s own funds. The company only works with regulated payment service providers.</p>
+        <b>Negative Balance Protection</b>
+        <p>Forex24 Global offers Negative Balance Protection to all of its clients, which is a guarantee a client cannot lose more money than they invested with the company.</p>
+        <b>Investor Compensation Fund</b>
+        <p>Forex24 Global is a member of the Investor Compensation Fund, which provides covered clients the extra security of receiving compensation from the fund for any claims against the company not fulfilling its obligations. For further details please <a href="../img/pdf/Investor-Compensation-Fund.pdf" target="_blank">see our ICF document</a>.</p>
+        <b>Funding and Website Security</b>
+        <p>We use level 1 PCI DSS compliant payment providers that use the highest level of online security when funding your account. We also adopt the SSL (Secure Sockets Layer) network security protocol that keeps your personal online communication and data with us private and secure.</p>
+      </div>
     </div>
   </section>
   <section class="payment  payment--inner">
@@ -128,18 +140,18 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="../about-us/stp-broker">STP Broker</a></li>
+          <li><a class="footer__active">Security Of Funds</a></li>
+          <li><a href="stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a href="../about-us/kids.html">KIDs</a></li>
-          <li><a href="../about-us/careers.html">Careers</a></li>
+          <li><a href="kids.html">KIDs</a></li>
+          <li><a href="careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="account-types.html">Account Types</a></li>
-          <li><a class="footer__active">Account Comparison</a></li>
-          <li><a href="product-specification.html">Product Spesification</a></li>
+          <li><a href="../trading/account-types.html">Account Types</a></li>
+          <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+          <li><a href="../trading/product-specification.html">Product Spesification</a></li>
           <li><a href="#">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="#">Funding and Withdrawal</a></li>
