--- a/forexglobal/about-us/stp-broker.html
+++ b/forexglobal/about-us/stp-broker.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Account Comparison - Forex24 Global</title>
+  <title>STP Broker - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -50,19 +50,19 @@
             <a href="#">About</a>
             <ul class="nav__sub">
               <li><a href="#">Licenses and Regulations</a></li>
-              <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
-              <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+              <li><a href="security-of-funds.html">Security of Funds</a></li>
+              <li><a>STP Broker</a></li>
               <li><a href="#">Legal Documents</a></li>
-              <li><a href="../about-us/kids.html">KIDs</a></li>
-              <li><a href="../about-us/careers.html">Careers</a></li>
+              <li><a href="kids.html">KIDs</a></li>
+              <li><a href="careers.html">Careers</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Trading</a>
             <ul class="nav__sub">
-              <li><a href="account-types.html">Account Types</a></li>
-              <li><a>Account Comparison</a></li>
-              <li><a href="product-specification.html">Product Specification</a></li>
+              <li><a href="../trading/account-types.html">Account Types</a></li>
+              <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+              <li><a href="../trading/product-specification.html">Product Specification</a></li>
               <li><a href="#">Trading Specification</a></li>
               <li><a href="#">Platforms</a></li>
               <li><a href="#">Funding and Withdrawal</a></li>
@@ -90,10 +90,17 @@
       </nav>
     </div>
   </header>
-  <section class="account-comparison">
+  <section class="stp">
     <div class="container">
-      <h1 class="account-comparison__name">Account comparison</h1>
-      <p class="account-comparison__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio minus, provident dolores quos. Facere, vel expedita rem. Facilis unde, quidem ab animi placeat doloribus. Debitis, placeat, cum dolor accusamus recusandae fuga eligendi ipsum, molestiae eos, ad sed? Esse aperiam, amet laboriosam assumenda eos voluptatem magnam ea officia odio dolorem. Beatae.</p>
+      <h1 class="stp__name">STP Broker</h1>
+      <div class="stp__img"></div>
+      <div class="stp__text">
+        <p>STP: stands for Straight Trough Processing</p>
+        <p>STP is a unique alternative which optimizes the speed of transactions by avoiding any interventions of a dealing desk, including no requotes.</p>
+        <p>Orders are automatically passed through to the company’s liquidity providers, which then allows the trade orders to be processed in an efficient and timely manner that will meet the highest level of clients’ satisfaction.</p>
+        <p>An STP broker in effect will allow its clients to trade during the release times of financial news without any restrictions. No strategy restrictions, trade as you wish whenever you want to.</p>
+        <p>An STP broker does not trade against clients orders and only makes money from the trading volume by either adding a small mark-up on the spread and/or commission. Therefore, there is no conflict of interest. If the client wins or loses on a trade, the broker receives the same amount. Overall, however, there is an intrinsic advantage to the broker if the client is successful with his/her trading as they will then trade with more volume for a longer period, resulting in greater profits for both parties, with full transparency.</p>
+      </div>
     </div>
   </section>
   <section class="payment  payment--inner">
@@ -128,18 +135,18 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="../about-us/stp-broker">STP Broker</a></li>
+          <li><a href="security-of-funds.html">Security Of Funds</a></li>
+          <li><a class="footer__active">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a href="../about-us/kids.html">KIDs</a></li>
-          <li><a href="../about-us/careers.html">Careers</a></li>
+          <li><a href="kids.html">KIDs</a></li>
+          <li><a href="careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="account-types.html">Account Types</a></li>
-          <li><a class="footer__active">Account Comparison</a></li>
-          <li><a href="product-specification.html">Product Spesification</a></li>
+          <li><a href="../trading/account-types.html">Account Types</a></li>
+          <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+          <li><a href="../trading/product-specification.html">Product Spesification</a></li>
           <li><a href="#">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="#">Funding and Withdrawal</a></li>
