--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -50,11 +50,11 @@
             <a href="#">About</a>
             <ul class="nav__sub">
               <li><a href="#">Licenses and Regulations</a></li>
-              <li><a href="#">Security of Funds</a></li>
-              <li><a href="#">STP Broker</a></li>
+              <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
+              <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
               <li><a href="#">Legal Documents</a></li>
-              <li><a href="#">KIDs</a></li>
-              <li><a href="#">Careers</a></li>
+              <li><a href="../about-us/kids.html">KIDs</a></li>
+              <li><a href="../about-us/careers.html">Careers</a></li>
             </ul>
           </li>
           <li>
@@ -227,11 +227,11 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a href="#">Security Of Funds</a></li>
-          <li><a href="#">STP Broker</a></li>
+          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a href="#">KIDs</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="../about-us/kids.html">KIDs</a></li>
+          <li><a href="../about-us/careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
