--- a/forexglobal/about-us/careers.html
+++ b/forexglobal/about-us/careers.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Account Comparison - Forex24 Global</title>
+  <title>Careers - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -50,19 +50,19 @@
             <a href="#">About</a>
             <ul class="nav__sub">
               <li><a href="#">Licenses and Regulations</a></li>
-              <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
-              <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+              <li><a href="security-of-funds.html">Security of Funds</a></li>
+              <li><a href="stp-broker.html">STP Broker</a></li>
               <li><a href="#">Legal Documents</a></li>
-              <li><a href="../about-us/kids.html">KIDs</a></li>
-              <li><a href="../about-us/careers.html">Careers</a></li>
+              <li><a href="kids.html">KIDs</a></li>
+              <li><a>Careers</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Trading</a>
             <ul class="nav__sub">
-              <li><a href="account-types.html">Account Types</a></li>
-              <li><a>Account Comparison</a></li>
-              <li><a href="product-specification.html">Product Specification</a></li>
+              <li><a href="../trading/account-types.html">Account Types</a></li>
+              <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+              <li><a href="../trading/product-specification.html">Product Specification</a></li>
               <li><a href="#">Trading Specification</a></li>
               <li><a href="#">Platforms</a></li>
               <li><a href="#">Funding and Withdrawal</a></li>
@@ -90,10 +90,21 @@
       </nav>
     </div>
   </header>
-  <section class="account-comparison">
+  <section class="careers">
     <div class="container">
-      <h1 class="account-comparison__name">Account comparison</h1>
-      <p class="account-comparison__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio minus, provident dolores quos. Facere, vel expedita rem. Facilis unde, quidem ab animi placeat doloribus. Debitis, placeat, cum dolor accusamus recusandae fuga eligendi ipsum, molestiae eos, ad sed? Esse aperiam, amet laboriosam assumenda eos voluptatem magnam ea officia odio dolorem. Beatae.</p>
+      <h1 class="careers__name">Careers</h1>
+      <div class="careers__img"></div>
+      <div class="careers__text">
+        <p>We offer a challenging and rewarding working environment, where every employee counts and can make a difference.</p>
+        <p>We believe in the value of our people and their input, the benefits of teamwork and the sense of belonging to our organisation.</p>
+        <p>We are passionate about developing our people and provide long-term career paths.</p>
+        <p>We are governed by the European Markets in Financial Instruments Directive (MiFID), fully supporting its purpose to provide unified investment services regulatory management in the European Economic Area (EEA), for fair practice, increasing efficiency, competition, consumer and employee protection.</p>
+        <p>We abide by the European Labour Law and the requirements for best employment practices as well as providing high levels of worker satisfaction.</p>
+        <div class="careers__links">
+          <a class="careers__download" href="../img/pdf/Customer-Support-French-Italian-German-Portuguese-Spanish-Swedish.pdf" target="_blank">Customer Support (French, Italian, German, Portuguese, Spanish, Swedish)</a>
+          <a class="careers__download" href="../img/pdf/Social-Media-Manager-Job-Description.pdf" target="_blank">Social Media Manager</a>
+        </div>
+      </div>
     </div>
   </section>
   <section class="payment  payment--inner">
@@ -128,18 +139,18 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="../about-us/stp-broker">STP Broker</a></li>
+          <li><a href="security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a href="../about-us/kids.html">KIDs</a></li>
-          <li><a href="../about-us/careers.html">Careers</a></li>
+          <li><a href="kids.html">KIDs</a></li>
+          <li><a class="footer__active">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="account-types.html">Account Types</a></li>
-          <li><a class="footer__active">Account Comparison</a></li>
-          <li><a href="product-specification.html">Product Spesification</a></li>
+          <li><a href="../trading/account-types.html">Account Types</a></li>
+          <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+          <li><a href="../trading/product-specification.html">Product Spesification</a></li>
           <li><a href="#">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="#">Funding and Withdrawal</a></li>
