--- a/forexglobal/about-us/kids.html
+++ b/forexglobal/about-us/kids.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Account Comparison - Forex24 Global</title>
+  <title>KIDs - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
@@ -50,19 +50,19 @@
             <a href="#">About</a>
             <ul class="nav__sub">
               <li><a href="#">Licenses and Regulations</a></li>
-              <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
-              <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+              <li><a href="security-of-funds.html">Security of Funds</a></li>
+              <li><a href="stp-broker.html">STP Broker</a></li>
               <li><a href="#">Legal Documents</a></li>
-              <li><a href="../about-us/kids.html">KIDs</a></li>
-              <li><a href="../about-us/careers.html">Careers</a></li>
+              <li><a>KIDs</a></li>
+              <li><a href="careers.html">Careers</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Trading</a>
             <ul class="nav__sub">
-              <li><a href="account-types.html">Account Types</a></li>
-              <li><a>Account Comparison</a></li>
-              <li><a href="product-specification.html">Product Specification</a></li>
+              <li><a href="../trading/account-types.html">Account Types</a></li>
+              <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+              <li><a href="../trading/product-specification.html">Product Specification</a></li>
               <li><a href="#">Trading Specification</a></li>
               <li><a href="#">Platforms</a></li>
               <li><a href="#">Funding and Withdrawal</a></li>
@@ -90,10 +90,19 @@
       </nav>
     </div>
   </header>
-  <section class="account-comparison">
+  <section class="kids">
     <div class="container">
-      <h1 class="account-comparison__name">Account comparison</h1>
-      <p class="account-comparison__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio minus, provident dolores quos. Facere, vel expedita rem. Facilis unde, quidem ab animi placeat doloribus. Debitis, placeat, cum dolor accusamus recusandae fuga eligendi ipsum, molestiae eos, ad sed? Esse aperiam, amet laboriosam assumenda eos voluptatem magnam ea officia odio dolorem. Beatae.</p>
+      <h1 class="kids__name">KIDs</h1>
+      <div class="kids__img"></div>
+      <div class="kids__text">
+        <p>In order to help you better understand our products and services and the nature, risks, costs, potential gains and losses associated with them – we developed Key Information Documents (KIDs). These are categorised below into four major asset classes and include CFDs on Currency pairs, Indices, Commodities, Equities or other OTC derivative products.</p>
+        <p>If you have any questions, contact Forex24 customer support team at <a href="mailto:support@forex24.com">support@forex24.com</a>.</p>
+        <b>Key Information Documents</b>
+        <p><a href="../img/pdf/Key-Information-Document-Forex-v1.0.0.pdf" target="_blank">Forex CFDs</a></p>
+        <p><a href="../img/pdf/Key-Information-Document-Commodities-v1.0.0" target="_blank">Treasury and Commodities CFDs</a></p>
+        <p><a href="../img/pdf/Key-Information-Document-Indices-v1.0.0" target="_blank">Indices CFDs</a></p>
+        <p><a href="../img/pdf/Key-Information-Document-Stocks-v1.0.0" target="_blank">Stocks CFDs</a></p>
+      </div>
     </div>
   </section>
   <section class="payment  payment--inner">
@@ -128,18 +137,18 @@
           <li><b>About</b></li>
           <li><hr></li>
           <li><a href="#">Licenses & Regulations</a></li>
-          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="../about-us/stp-broker">STP Broker</a></li>
+          <li><a href="security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="stp-broker.html">STP Broker</a></li>
           <li><a href="#">Legal Documents</a></li>
-          <li><a href="../about-us/kids.html">KIDs</a></li>
-          <li><a href="../about-us/careers.html">Careers</a></li>
+          <li><a class="footer__active">KIDs</a></li>
+          <li><a href="careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="account-types.html">Account Types</a></li>
-          <li><a class="footer__active">Account Comparison</a></li>
-          <li><a href="product-specification.html">Product Spesification</a></li>
+          <li><a href="../trading/account-types.html">Account Types</a></li>
+          <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
+          <li><a href="../trading/product-specification.html">Product Spesification</a></li>
           <li><a href="#">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="#">Funding and Withdrawal</a></li>
