--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -63,7 +63,7 @@
               <li><a href="../account-types.html">Account Types</a></li>
               <li><a href="../account-comparison.html">Account Comparison</a></li>
               <li><a href="../product-specification.html">Product Specification</a></li>
-              <li><a href="#">Trading Specification</a></li>
+              <li><a href="../trading-specification.html">Trading Specification</a></li>
               <li><a href="#">Platforms</a></li>
               <li><a href="#">Funding and Withdrawal</a></li>
               <li><a href="#">Announcements</a></li>
@@ -76,7 +76,7 @@
               <li><a href="#">Tools</a></li>
             </ul>
           </li>
-          <li><a href="#">Partners</a></li>
+          <li><a href="https://partners.forex24.com/" target="_blank">Partners</a></li>
           <li>
             <a href="#">Contact Us</a>
             <ul class="nav__sub">
@@ -218,7 +218,7 @@
           <li><a href="../account-types.html">Account Types</a></li>
           <li><a href="../account-comparison.html">Account Comparison</a></li>
           <li><a href="../product-specification.html">Product Spesification</a></li>
-          <li><a href="#">Trading Spesification</a></li>
+          <li><a href="../trading-specification.html">Trading Spesification</a></li>
           <li><a href="#">Platforms</a></li>
           <li><a href="#">Funding and Withdrawal</a></li>
           <li><a href="#">Announcements</a></li>
