--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -77,7 +77,7 @@
             </li>
             <li><a href="https://partners.forex24.com/" target="_blank">Partners</a></li>
             <li>
-              <a href="#">Contact Us</a>
+              <a href="../contact-us/contact-us.html">Contact Us</a>
               <ul class="nav__sub">
                 <li><a href="#">FAQ</a></li>
               </ul>
