--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -46,7 +46,7 @@
         <nav class="nav  nav--closed">
           <ul class="nav__list">
             <li>
-              <a class="nav__link" href="#" onclick="about()">About</a>
+              <a class="nav__link" onclick="about()">About</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><b>About</b></li>
@@ -60,7 +60,7 @@
               </div>
             </li>
             <li>
-              <a class="nav__link" href="#" onclick="trading()">Trading</a>
+              <a class="nav__link" onclick="trading()">Trading</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><b>Trading</b></li>
@@ -75,7 +75,7 @@
               </div>
             </li>
             <li>
-              <a href="#" onclick="resources()">Resources</a>
+              <a onclick="resources()">Resources</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><b>Resources</b></li>
@@ -86,7 +86,7 @@
             </li>
             <li><a href="https://partners.forex24.com/" target="_blank">Partners</a></li>
             <li>
-              <a href="#" onclick="contact()">Contact Us</a>
+              <a onclick="contact()">Contact Us</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><b>Contact Us</b></li>
